--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,24 +21,27 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Set lowercase image name
+        run: |
+          REPO_LC=$(echo "${GITHUB_REPOSITORY}" | tr '[:upper:]' '[:lower:]')
+          echo "IMAGE_NAME=ghcr.io/${REPO_LC}/myapp:latest" >> $GITHUB_ENV
+
       - name: Build Docker image
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/bigbasket_clone/myapp:latest
-          docker build -t $IMAGE_NAME .
-          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
+          docker build -t ${{ env.IMAGE_NAME }} .
 
       - name: Push Docker image
         run: |
           docker push ${{ env.IMAGE_NAME }}
 
-      # - name: Deploy to AWS EC2
-      #   uses: appleboy/ssh-action@v0.1.10
-      #   with:
-      #     host: ${{ secrets.EC2_HOST }}
-      #     username: ubuntu
-      #     key: ${{ secrets.EC2_SSH_KEY }}
-      #     script: |
-      #       docker pull ${{ env.IMAGE_NAME }}
-      #       docker stop myapp || true
-      #       docker rm myapp || true
-      #       docker run -d -p 8000:8000 --name myapp ${{ env.IMAGE_NAME }}
+      - name: Deploy to AWS EC2
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            docker pull ${{ env.IMAGE_NAME }}
+            docker stop myapp || true
+            docker rm myapp || true
+            docker run -d -p 8000:8000 --name myapp ${{ env.IMAGE_NAME }}
